--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <title>Okanosaki</title> 
  </head>
  <body>
-    <div class="header"><a href="https://yuhshi-u4.github.io/"><img src="ロゴ2.png" alt="Okanosaki" id="logo"></a></div>
+    <div class="header"><a href="https://okanosaki.github.io/home/"><img src="ロゴ2.png" alt="Okanosaki" id="logo"></a></div>
   <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
   <label for="openSidebarMenu" class="sidebarIconToggle">
     <div class="spinner diagonal part-1"></div>
@@ -22,7 +22,7 @@
   <div id="sidebarMenu">
     <ul class="sidebarMenuInner">
      <li class="o"><a href="https://yuhshi-u4.github.io/No.5/">Okanosakiについて<span>本サイトの概要紹介</span></a></li>
-     <li class="i"><a href="https://yuhshi-u4.github.io/-Browsing/">作品閲覧</a></li>
+     <li class="i"><a href="https://okanosaki.github.io/Browsing/">作品閲覧</a></li>
       <li class="o"><a href="https://yuhshi-u4.github.io/No.2/">メンバー一覧</a></li>
       <li class="i"><a href="https://yuhshi-u4.github.io/No.3/">編集長のつぶやき</a></li>
      <li class="o"><a href="https://yuhshi-u4.github.io/link/">リンク</a></li>
