--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </label>
   <div id="sidebarMenu">
     <ul class="sidebarMenuInner">
-     <li class="o"><a href="https://yuhshi-u4.github.io/No.5/">Okanosakiについて<span>本サイトの概要紹介</span></a></li>
+     <li class="o"><a href="https://okanosaki.github.io/overview/">Okanosakiについて<span>本サイトの概要紹介</span></a></li>
      <li class="i"><a href="https://okanosaki.github.io/Browsing/">作品閲覧</a></li>
       <li class="o"><a href="https://yuhshi-u4.github.io/No.2/">メンバー一覧</a></li>
       <li class="i"><a href="https://yuhshi-u4.github.io/No.3/">編集長のつぶやき</a></li>
