--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
  <head>
+  <meta name="description" content="オカノサキ公式サイト。創作チームオカノサキメンバーの作品や最新の活動状況を公開しています。">
+  <meta name="keywords" content="okanosaki,オカノサキ,文芸,おかのさき">
   <meta http-equiv="content-language" content="ja">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
   <meta charset="UTF-8">
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <meta property="og:site_name" content="Okanosaki">
+  <meta property="og:title" content="Okanosaki">
+  <meta property="og:url" content="https://okanosaki.github.io/home/">
     <link rel=stylesheet type=text/CSS href="ホーム.css">
     <link href="https://fonts.googleapis.com/css?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
