--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html>
  <head>
   <meta name="description" content="オカノサキ公式サイト。創作チームオカノサキメンバーの作品や最新の活動状況を公開しています。">
@@ -40,8 +40,8 @@
         <h1>ようこそ、オカノサキへ。</h1>
         <p>本サイトはオカノサキメンバーに所属する創作家たちの作品展示や活動報告などを行う情報提供サイトです。</p>
         <h4>最新の活動報告</h4>
-        <p>20/03/15 サイトオカノサキ設立</p>
         <p>20/04/22　サイトオカノサキ公開・イラスト初投稿</p>
+        <p>20/05/14　イラスト投稿</p>
     </div>
   </div>
  </body>
