--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
  <head>
   <meta name="description" content="オカノサキ公式サイト。創作チームオカノサキメンバーの作品や最新の活動状況を公開しています。">
