--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1>ようこそ、オカノサキへ。</h1>
         <p>本サイトはオカノサキメンバーに所属する創作家たちの作品展示や活動報告などを行う情報提供サイトです。</p>
         <h4>最新の活動報告</h4>
-        <p>20/04/22　サイトオカノサキ公開・イラスト初投稿</p>
+        <p>20/05/18　漫画初投稿</p>
         <p>20/05/14　イラスト投稿</p>
     </div>
   </div>
