--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <h1>ようこそ、オカノサキへ。</h1>
         <p>本サイトはオカノサキメンバーに所属する創作家たちの作品展示や活動報告などを行う情報提供サイトです。</p>
         <h4>最新の活動報告</h4>
-        <p>21/04/02　新メンバー加入</p>
-    　　 <p>21/02/25　イラスト投稿</p>
+        <p>21/04/02　新メンバー加入
+    　　 <br>21/02/25　イラスト投稿</p>
     </div>
   </div>
  </body>
